# sglang

./: .gitignore
.antigravity/: aarch64_compilation_guide.md  fix_extend_attn.md  fix_flash_attn.md  implementation_plan.md  implementation_plan_2.md  qwen_correctness_layer.md  task.md  walkthrough.md
.antigravity/first-session/: aten_vec_sve_apis.md  implementation_plan.md  walkthrough.md
.antigravity/second-session/: fp8_sve_plan.md  int4_smmla_plan.md  int8_smmla_plan.md
.claude/skills/sve-porting-kernel/: SKILL.md
python/: pyproject_cpu.toml
python/sglang/srt/: environ.py  server_args.py
python/sglang/srt/layers/: activation.py  amx_utils.py  layernorm.py
python/sglang/srt/layers/attention/fla/: layernorm_gated.py
python/sglang/srt/layers/moe/: topk.py
python/sglang/srt/layers/quantization/: unquant.py
python/sglang/srt/layers/rotary_embedding/: base.py  mrope.py
python/sglang/srt/layers/utils/: multi_platform.py
python/sglang/srt/mem_cache/: memory_pool.py
python/sglang/srt/models/: debug_utils.py  qwen3_5.py  qwen3_next.py
python/sglang/srt/utils/: common.py
sgl-kernel/benchmark/: bench_cpu_bf16_gemm.py  bench_cpu_extend_attention.py
sgl-kernel/csrc/cpu/: CMakeLists.txt  activation.cpp  decode.cpp  extend.cpp  flash_attn.cpp  flash_attn.h  gemm.cpp  gemm.h  gemm_fp8.cpp  gemm_int4.cpp  gemm_int8.cpp  moe.cpp  moe_int4.cpp  norm.cpp  qkv_proj.cpp  rope.cpp  topk.cpp  vec.h  vec_pack.h  vec_sve512.h
sgl-kernel/csrc/cpu/mamba/: conv.cpp  fla.cpp
sgl-kernel/csrc/cpu/model/: qwen3.cpp
sgl-kernel/csrc/cpu/tests/: CMakeLists.txt  SVE_TESTING.md  bench_sve_kernels.cpp  test_sve_highlevel_ops.cpp  test_sve_kernels  test_sve_kernels.cpp
